--- a/client/src/index.css
+++ b/client/src/index.css
@@ -148,7 +148,8 @@ p {
   align-items: center;
   justify-content: center;
   padding: 0 26px;
-  background: var(--accent-color);
+  background-color: var(--accent-color);
+  border: none;
   font-family: 'Montserrat-Medium';
   font-size: 14px;
   line-height: 2.7;
@@ -158,7 +159,6 @@ p {
 }
 .mainButton:hover,
 .mainButton:focus {
-  background: transparent;
   border: 2px solid var(--accent-color);
   outline: none;
   box-shadow: 0px 4px 30px rgba(252, 132, 45, 0.5);
@@ -171,7 +171,7 @@ p {
   font-family: 'Montserrat-Medium';
   font-size: 14px;
   line-height: 2.7;
-  background: transparent;
+  background-color: transparent;
   color: var(--main-text);
   border: 1px solid var(--main-text);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
