--- a/client/src/index.css
+++ b/client/src/index.css
@@ -141,7 +141,7 @@ p {
 }
 
 .mainButton {
-  display: flex;
+  /*display: flex;*/
   align-items: center;
   justify-content: center;
   padding: 0 26px;
